# elick

./: ;  CMakeLists.txt  LICENSE  README  data.piss  elric  elric.conf  makefile  node_line_drawer.cpp  node_line_drawer.hpp  output.txt
.cache/clangd/index/: animation.cpp.1D4FD18DE63D5434.idx  animation.cpp.3195C6798D0EC4F2.idx  animation.cpp.54B78F4B9994DA92.idx  animation.cpp.F480E44DD5829008.idx  animation.hpp.20907E5BA60DE8DD.idx  animation.hpp.86F07D1C3B001C73.idx  animation.hpp.BEFD54F30567C5E9.idx  animation.hpp.D8D607B0A907662C.idx  aseprite.cpp.18AFABE6A5C8DCC4.idx  aseprite.cpp.49AD182F0102EC9D.idx  aseprite.cpp.7A4FCE522150DCC9.idx  aseprite.hpp.0230A7932557249D.idx  aseprite.hpp.AF323AD82156B381.idx  aseprite.hpp.BA2A28977A8C37E1.idx  audio.cpp.00B664F39E033DAE.idx  audio.cpp.7C87E53FD477BC4B.idx  (+71 more)
art/selfmade/: background.aseprite  basic_plant.aseprite  farm_design.aseprite  green_junimo.aseprite  red_junimo.aseprite
include/engine/: animation.cpp  animation.hpp  point.hpp  raw_text.cpp  raw_text.hpp  sdl_wrapper.cpp  sdl_wrapper.hpp
src/: :w  gate.cpp  gate.hpp  gate_adder.cpp  gate_adder.hpp  gate_manipulator.cpp  gate_manipulator.hpp  gate_packager.cpp  gate_packager.hpp  globals.hpp  helper.cpp  helper.hpp  keybind_parser.cpp  keybind_parser.hpp  keymap.hpp  main.cpp  node_line_drawer.cpp  node_line_drawer.hpp  saver.cpp  saver.hpp  selection_box.cpp  selection_box.hpp  sim_context.cpp  sim_context.hpp
src/engine/: audio.cpp  audio.hpp  point.cpp  raw_text.cpp  raw_text.hpp  sdl_wrapper.cpp  sdl_wrapper.hpp  texture.cpp  texture.hpp
(+5 files in other folders)
